--- a/style/style-public.css
+++ b/style/style-public.css
@@ -57,19 +57,27 @@ a {
     padding: 6px;
     border-radius: 4px;
     margin: 0 px;
+    
 }
 
 .menu-section .active {
-    border: 1px solid green;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
+    text-decoration: underline;
 }
 
 .menu-section a:hover {
-    background-color: rgb(20, 179, 126);
+    background-color: rgb(0, 0, 0);
+    color: white;
 }
 
 
 
 /*---------------BODY STARTS HERE -------------*/
+
+
+.scrollable{
+    padding-bottom: 200px;
+}
 
 .body {
     position: relative;
@@ -97,7 +105,7 @@ a {
     }
     .logo-section img{
         height: 40px;
-        al
+        
     }
 
     .menu-section a {
@@ -112,3 +120,75 @@ a {
 
  
 }
+
+body ,.fixed{
+    margin: auto;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    overflow: auto;
+    background: linear-gradient(315deg, rgb(104, 104, 104) 3%, rgb(114, 133, 150) 38%, rgb(114, 151, 148) 68%, rgb(167, 140, 140) 98%);
+    animation: gradient 15s ease infinite;
+    background-size: 400% 400%;
+    background-attachment: fixed;
+    }
+
+    @keyframes gradient {
+    0% {
+        background-position: 0% 0%;
+        }
+    50% {
+        background-position: 100% 100%;
+        }
+    100% {
+        background-position: 0% 0%;
+        }
+    }
+
+    .wave {
+        background: rgb(255 255 255 / 25%);
+        border-radius: 1000% 1000% 0 0;
+        position: fixed;
+        width: 200%;
+        height: 12em;
+        animation: wave 10s -3s linear infinite;
+        transform: translate3d(0, 0, 0);
+        opacity: 0.2;
+        bottom: 0;
+        left: 0;
+        z-index: -1;
+    }
+
+    .wave:nth-of-type(2) {
+        bottom: -1.25em;
+        animation: wave 18s linear reverse infinite;
+        opacity: 0.2;
+        z-index: -1;
+    }
+
+    .wave:nth-of-type(3) {
+        bottom: -2.5em;
+        animation: wave 20s -1s reverse infinite;
+        opacity: 0.3;
+        z-index: -1;
+    }
+
+    @keyframes wave {
+        2% {
+            transform: translateX(1);
+        }
+
+        25% {
+            transform: translateX(-25%);
+        }
+
+        50% {
+            transform: translateX(-50%);
+        }
+
+        75% {
+            transform: translateX(-25%);
+        }
+
+        100% {
+            transform: translateX(1);
+        }
+    }
