--- a/style/style-d.css
+++ b/style/style-d.css
@@ -77,6 +77,102 @@ li {
 }
 
 /* ---------BODY-------- */
+
+textarea,input{
+    background: transparent;
+    border: 1px solid rgba(0, 0, 0, 0.9);
+    border-radius: 5px;
+    color: black;
+    outline: none;
+}
+
+textarea::-webkit-input-placeholder {
+    color: #252525;
+    }
+
+input::-webkit-input-placeholder {
+    color: #252525;
+    }
+
+.notice.post-assignment{
+    border: none;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
+}
+
+body,.menu-section,.logo-section,.notice.post-assignment{
+    margin: auto;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    overflow: auto;
+    background: linear-gradient(315deg, rgb(104, 104, 104) 3%, rgb(114, 133, 150) 38%, rgb(114, 151, 148) 68%, rgb(167, 140, 140) 98%);
+    animation: gradient 15s ease infinite;
+    background-size: 400% 400%;
+    background-attachment: fixed;
+    }
+
+    @keyframes gradient {
+    0% {
+        background-position: 0% 0%;
+        }
+    50% {
+        background-position: 100% 100%;
+        }
+    100% {
+        background-position: 0% 0%;
+        }
+    }
+
+    .wave {
+        background: rgb(255 255 255 / 25%);
+        border-radius: 1000% 1000% 0 0;
+        position: fixed;
+        width: 200%;
+        height: 12em;
+        animation: wave 10s -3s linear infinite;
+        transform: translate3d(0, 0, 0);
+        opacity: 0.2;
+        bottom: 0;
+        left: 0;
+        z-index: -1;
+    }
+
+    .wave:nth-of-type(2) {
+        bottom: -1.25em;
+        animation: wave 18s linear reverse infinite;
+        opacity: 0.2;
+        z-index: -1;
+    }
+
+    .wave:nth-of-type(3) {
+        bottom: -2.5em;
+        animation: wave 20s -1s reverse infinite;
+        opacity: 0.3;
+        z-index: -1;
+    }
+
+    @keyframes wave {
+        2% {
+            transform: translateX(1);
+        }
+
+        25% {
+            transform: translateX(-25%);
+        }
+
+        50% {
+            transform: translateX(-50%);
+        }
+
+        75% {
+            transform: translateX(-25%);
+        }
+
+        100% {
+            transform: translateX(1);
+        }
+    }
+
+
+
 .body-section {
     margin-top: 45px;
     padding: 0 15px;
